# MultithreadedProgrammingSixthSemester

./: .gitignore  .gitmodules  .~lock.1.5 Високорівневі засоби багатопоточної технології java.pptx#  .~lock.1.7 Пули потоків. Інтерфейс Executor.pptx#  .~lock.1.8 ForkJoin Framework.pptx#  .~lock.Питання до екзамену 2024.docx#  document_converter.py  exam_theory_2024.docx  file_type_to_txt.py  java_to_txt.py
CourseWork/: AStar.cpp  CMakeLists.txt  TAStar.h  TBFS.h  TGraph.h  TSyncQueue.h  main.cpp
CourseWork/Core/: TAStar.h  TGraphNode.h  TNode.h
CourseWork/DocumentationUA/: .~lock.Пояснювальна записка.odt#  Benchmark.txt  GraphPlotter.py  code.txt  communication.csv  file_type_to_txt.py  plot_single.py  Пояснювальна записка.odt
CourseWork/Include/ParallelBFS/: TAtomicQueue.hpp  TBaseBFSMixin.hpp  TCommunicationBFS.hpp  TCursor.hpp  TDeque.hpp  THelpers.hpp  TParallelBFSMixin.hpp  TPipes.hpp  TSequentialBFS.hpp  TSharedBFS.hpp  TSpecialQueue.hpp
CourseWork/Source/: TCursor.cpp  THelpers.cpp
CourseWork/Source/ParallelBFS/: TBaseBFS.hpp  TPBFS.hpp  TSequentialBFS.hpp
CourseWork/Tests/: Benchmark.cpp  CMakeLists.txt  Cursor.cpp  Deque.cpp  GraphPlotter.py  Pipes.cpp  TestOne.cpp
CourseWorkRust/: Cargo.toml
CourseWorkRust/src/: atomic_queue.rs  bfs.rs  (+4 more)
Lab1/: .~lock.front.odt#  IP_11_Panchenko_1.odt  code.txt  front.odt
Lab2/: IP_11_Panchenko_2.odt  Results.csv  code.txt  results.csv  ІП_11_Панченко_2.odt
Lab3/: code.txt  ІП_11_Панченко_3.odt
Lab4/: .~lock.IP_11_Panchenko_3.odt#  .~lock.IP_11_Panchenko_4.odt#  Exercise1_2.txt  Exercise3_1.txt  Exercise3_2.txt  IP_11_Panchenko_3.odt  IP_11_Panchenko_4.odt  MatrixMultiplicationExecutor.txt  code.txt
Lab5/: IP_11_Panchenko_5.odt  code.txt  page50.html
Lab6/: BlockingMPI.cpp  BlockingMPI.h  CMakeLists.txt  IMatrixAlgorithm.h  IP_11_Panchenko_6.odt  Matrix.cpp  Matrix.h  MatrixFactory.cpp  MatrixFactory.h  bin  build.sh  code.txt  gen_data.py  log.txt  main.cpp  makefile  run.sh
Lab6/Include/Lab6/: Matrix.h  MatrixFactory.h
Lab6/LabStuff/: Matrix.cpp  Matrix.h  MatrixFactory.cpp
Lab6/Scripts/: build_graph.py  export_openmpi.sh  gen_data.py  install_openmpi  instructions.txt
Lab6/Source/Lab6/: Matrix.cpp  MatrixFactory.cpp
Lab6/include/lab_6/: alg_type.hpp  cli_app.hpp  common.hpp  constants.hpp  log_error.hpp  mat_sizes.hpp  matrix.hpp  matrix_factory.hpp
Lab6/include/lab_6/lab_6/: child_rank.hpp  common_tags.hpp  main_rank.hpp  matrix.hpp  matrix_factory.hpp
Lab6/mpi_mul/: CMakeLists.txt
Lab6/mpi_mul/include/mpi_mul/: alg_type.hpp  log_error.hpp  matrix.hpp  mpi_mul.hpp
Lab6/mpi_mul/src/: child_rank.cpp  main_rank.cpp  matrix.cpp  mpi_mul.cpp
Lab6/mpi_mul/src/mpi_mul/: child_rank.hpp  common.hpp  main_rank.hpp
Lab6/scripts/: build_graph.py  gen_data.py  log.txt
Lab6/src/: cli_app.cpp  common.cpp  main_rank.cpp  matrix.cpp  matrix_factory.cpp
Lab6/src/lab_6/: child_rank.cpp  main_rank.cpp  matrix.cpp
Lab7/: BaseAlgorithm.h  CMakeLists.txt  IMatrix.h  IP_11_Panchenko_6.odt  IP_11_Panchenko_7.odt  Matrix.cpp  Matrix.h  MatrixFactory.cpp  MatrixFactory.h  MatrixProxy.cpp  MatrixProxy.h  bin  build_graph.py  code.txt  file_type_to_txt.py  gen_data.py  log.txt  main.cpp  makefile  prog.cpp
Lab7/include/lab_6/: cli_app.hpp  constants.hpp  main_rank.hpp  matrix.hpp
Lab7/include/lab_7/: alg_type.hpp  child_rank.hpp  cli_app.hpp  common.hpp  constants.hpp
Lab7/scripts/: build_graph.py  gen_data.py  log.txt
Lab7/src/: child_rank.cpp  cli_app.cpp  common.cpp  main_rank.cpp  matrix.cpp
Lab8/: IP_11_Panchenko_8.odt  code.txt  records.csv
course_work/: Cargo.toml
exam/: ТПО Екзамен.docx
exam/mpi/: CMakeLists.txt  CMakeUserPresets.json  conan_install.sh  conanfile.py  main.cpp  run_app.py
exam/mpi/conan_external/generators/: CLI11-Target-debug.cmake  CLI11-Target-release.cmake  CLI11-debug-x86_64-data.cmake  CLI11-release-x86_64-data.cmake  CLI11Config.cmake  CLI11ConfigVersion.cmake  CMakePresets.json  conan_toolchain.cmake  conanbuild.sh  conanbuildenv-debug-x86_64.sh  conanbuildenv-release-x86_64.sh  conandeps_legacy.cmake  conanrun.sh  conanrunenv-debug-x86_64.sh  conanrunenv-release-x86_64.sh  deactivate_conanbuild.sh  deactivate_conanrun.sh  fmt-config.cmake  fmt-debug-x86_64-data.cmake  fmt-release-x86_64-data.cmake  magic_enum-Target-debug.cmake  magic_enum-config-version.cmake  magic_enum-config.cmake  magic_enum-debug-x86_64-data.cmake  magic_enum-release-x86_64-data.cmake  tl-optional-Target-debug.cmake  tl-optional-Target-release.cmake  tl-optional-config.cmake  tl-optional-debug-x86_64-data.cmake  tl-optional-release-x86_64-data.cmake  tl-optionalTargets.cmake
exam/mpi/include/exam_mpi/: cli_app.hpp  constants.hpp  helpers.hpp
exam/mpi/src/: cli_app.cpp
lab_6/: CMakeLists.txt  main.cpp
lab_6/include/lab_6/lab_6/: alg_type.hpp  child_rank.hpp  cli_app.hpp  main_rank.hpp  matrix.hpp
lab_6/scripts/: gen_data.py
lab_6/src/lab_6/: child_rank.cpp  cli_app.cpp  main_rank.cpp  matrix_factory.cpp
lectures/: .~lock.1.1 Поняття паралельних, одночасних та розподілених обчислень.pptx#  .~lock.1.3 Алгоритми паралельного множення матриць.pptx#  .~lock.2.6 MPJ Express.pptx#  .~lock.2.7 Технологія Grid (скорочено).pptx#  0 Загальна інформація 2024 з КР.pptx  1.1 Поняття паралельних, одночасних та розподілених обчислень.pptx  1.10 Імітаційне моделювання багатопоточної програми.pptx  1.3 Алгоритми паралельного множення матриць.pptx  1.5 Високорівневі засоби багатопоточної технології java.pptx  1.6 Негативні ефекти управління потоками java.pptx  1.7 Пули потоків. Інтерфейс Executor.pptx  1.8 ForkJoin Framework.pptx  1.9 Моделювання паралельних обчислень.pptx  2.1 Розподілені обчислювальні системи .pptx  2.10 Алгоритми самоорганізації моделей.pptx  2.2 Стандарт Message Passing Interface.pptx  2.3 Блокуючі MPI-методи.pptx  2.4 Неблокуючі МРІ-методи обміну повідомленнями.pptx  2.5 МРІ-методи колективного обміну.pptx  2.6 MPJ Express.pptx  2.7 Технологія Grid (скорочено).pptx  2.8 Технології_RMI_IDL.pptx  2.9 Java Networking.pptx  Питання до екзамену 2024.docx
mkr1/: pom.xml
(+342 files in other folders)
